# starter-repo

./: project1-prompts.md
starter-repo/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
starter-repo/app/: __init__.py  _fake_llm.py  graph.py  guardrails.py  hello_agent.py  llm.py  main.py  smoke.py
starter-repo/app/nodes/: _utils.py  planner.py  reflect.py  researcher.py  writer.py
starter-repo/app/playground/: demo_embedding.py  guardrail_demo.py  tiny_graph.py
starter-repo/app/tools/: __init__.py  fetch_url.py  read_pdf.py  search_local_docs.py  summarize.py  web_search.py
starter-repo/app/ui/: index.html  styles.css
starter-repo/data/: README.md
starter-repo/data/sample-corpus/anthropic-policy/: data-retention.md  usage-policy.md
starter-repo/data/sample-corpus/aws-docs/: bedrock-overview.md  iam-rotation.md  s3-encryption.md
starter-repo/data/sample-corpus/k8s-docs/: deployments.md  secrets.md
starter-repo/data/support/: mock_logs.json  taxonomy.yaml  tickets.jsonl
starter-repo/data/support/runbooks/: mfa-loop.md
starter-repo/evals/: README.md  citation_eval.py  e2e_eval.py  golden.jsonl  planner_eval.py
starter-repo/ingest/: __init__.py  chunk.py  search.py  upsert.py
starter-repo/scripts/: create_cloudsql.sh  deploy_agentcore.sh  deploy_cloudrun.sh  deploy_vertex_engine.sh  postgres-init.sql  setup_aws.sh  setup_gcp.sh  verify_langsmith.py
