[project]
name = "monk-bootcamp-starter"
version = "0.1.0"
description = "Monk Technologies Agentic AI Bootcamp starter repo"
requires-python = ">=3.11,<3.13"

dependencies = [
    # LangChain / LangGraph
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-aws>=0.2.10",
    "langchain-google-vertexai>=2.0.10",
    "langchain-community>=0.3,<0.4",
    "langchain-tavily>=0.1.0",
    "tavily-python>=0.5.0",
    "langgraph>=0.2.50,<0.3",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "langgraph-checkpoint-postgres>=2.0.7",
    "aiosqlite>=0.20.0",
    "langsmith>=0.1.140",
    # Cloud SDKs
    "boto3>=1.35.40",
    "google-cloud-aiplatform[agent_engines,langchain]>=1.74.0",
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.3",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    # Data
    "psycopg[binary]>=3.2.3",
    "pgvector>=0.3.6",
    "pyyaml>=6.0.2",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # HTTP + parsing
    "httpx>=0.27.2",
    "beautifulsoup4>=4.12.3",
    "pypdf>=5.1.0",
    # Misc
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.4",
    "basedpyright>=1.21.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportMissingImports = "warning"
